Added auto generated swagger docs

--- a/modules/stock-service/src/main/resources/application.yml
+++ b/modules/stock-service/src/main/resources/application.yml
@@ -19,3 +19,6 @@ ingestion:
     csvPath: ./data/stock.csv
   sync:
     cron: "0 */1 * * * *"
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
