--- a/modules/stock-service/src/main/resources/application.yml
+++ b/modules/stock-service/src/main/resources/application.yml
@@ -12,6 +12,11 @@ spring:
     console:
       enabled: true
       path: /h2-console
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 ingestion:
   vendorA:
     baseUrl: http://localhost:8081
@@ -22,3 +27,8 @@ ingestion:
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
+events:
+  sink: rabbit
+  broker:
+    exchange: stock.events
+    routingKey: out-of-stock
